@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:orientation="vertical"
+  >
+  <TextView android:text="@string/OnClickedMess" 
+    android:id="@+id/TextView01"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="5pt"
+    android:paddingRight="5pt"
+    />
+  <TextView android:text="FileName" 
+    android:id="@+id/OpenClickFile"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="5pt"
+    android:paddingRight="5pt"
+    android:paddingBottom="5pt"
+    />
+  <Button
+    android:text="@string/OnClickedOpen" 
+    android:id="@+id/OpenClickOK"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    />
+</LinearLayout>
