@@ -63,4 +63,6 @@ Here you will find some more help in the future.
     <string name="Error">Error</string>
     <string name="NoFileName">Must at least give a file name</string>
     <string name="DBQueryType">Query Type</string>
+    <string name="OnClickedMess">You clicked on this SQLite database:</string>
+    <string name="OnClickedOpen">Open database with\naSQLiteManager</string>
 </resources>
